--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# If you're treating the parent folder as a monorepo
-
 # Node modules in both apps
 repair-shop-admin/node_modules/
 repair-shop-customer/node_modules/
@@ -21,6 +19,7 @@ repair-shop-customer/build/
 # System files
 .DS_Store
 Thumbs.db
+**/.DS_Store
 
 # Editor
 .vscode/
@@ -29,3 +28,6 @@ Thumbs.db
 # Cache
 **/.cache
 **/node_modules/.cache
+
+# Lock files (optional - you can commit these)
+# **/package-lock.json
