--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",     // ← Make sure this exists
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   }
 }
